[package]
name               = "kure"
version            = "1.0.0"
edition            = "2021"
license            = "Apache-2.0"
description        = "Monitors DS18B20 thermosensors."
readme             = "README.md"
homepage           = "https://github.com/rjhansen/kure"
repository         = "git@github.com:rjhansen/kure.git"
authors            = ["Robert J. Hansen <rjh@sixdemonbag.org>"]
keywords           = ["ds18b20"]
categories         = ["science"]
publish            = false

[[bin]]
name               = "kure"
path               = "src/main.rs"
test               = false
doctest            = false
bench              = false
harness            = false
edition            = "2021"

[package.metadata.deb]
maintainer         = "Robert J. Hansen <rjh@sixdemonbag.org>"
copyright          = "2021"
maintainer-scripts = "scripts/"
systemd-units      = { unit-name = "kure" }

[dependencies]
glob               = "0.3.0"
log                = "0.4.14"
env_logger         = "0.9.0"
regex              = "1.5.4"
lazy_static        = "1.4.0"
chrono             = "0.4"
